# cr-ASOS

./: .gitignore  README.md  pyproject.toml
src/cr_asos/: new_plotting.py  plotting.py  readnplot.py
src/cr_asos/archived/: plotting.py
src/cr_asos/io/: __init__.py  download.py  read_asos_csv.py
src/cr_asos/utils/: __init__.py  calculate_relative_humidity.py  fahrenheit_to_celsius.py
